@@ -2,6 +2,12 @@
 \title{News for Package \pkg{smacof}}
 \encoding{UTF-8}
 
+\section{Changes in Version 1.8-14}{
+  \itemize{
+    \item Bug fix in \code{plot.smacofID()}. 
+}  
+}
+
 \section{Changes in Version 1.8-13}{
   \itemize{
     \item Aspect ratio 1 added as default for the bubble plot option in \code{plot.smacof()}. 
